# tracing-py

./: .gitignore  .gitmodules  .jjignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  pyproject.toml  rustc-ice-2026-01-21T11_50_56-815771.txt  rustc-ice-2026-01-21T11_50_56-815772.txt  tracing.pyi
.github/workflows/: CI.yml
.jjconflict-base-0/: pyproject.toml
.jjconflict-base-0/src/: ext.rs  introspect.rs  level.rs
.jjconflict-base-0/src/callsite/: kind.rs
.jjconflict-base-0/src/ext/: frame.rs
.jjconflict-base-0/src/formatting/: valuable.rs
.jjconflict-base-0/src/instrument/: py_signature.rs
.jjconflict-base-0/src/layer/fmt/: file.rs  span.rs
.jjconflict-base-0/src/template/: interpolation.rs
.jjconflict-side-0/: pyproject.toml
.jjconflict-side-0/src/: formatting.rs  imports.rs  py_type.rs
.jjconflict-side-0/src/cached/: display.rs
.jjconflict-side-0/src/callsite/: empty.rs
.jjconflict-side-0/src/ext/: any.rs  ffi.rs
.jjconflict-side-0/src/instrument/: fn_types.rs
.jjconflict-side-0/src/instrument/fn_types/: async_generator.rs
.jjconflict-side-0/src/layer/: fmt.rs
.jjconflict-side-0/src/layer/fmt/: to_layer.rs
.jjconflict-side-0/src/template/: template_string.rs
.jjconflict-side-1/: .gitignore  Cargo.toml  tracing.pyi
.jjconflict-side-1/src/: callsite.rs  event.rs  layer.rs  span.rs
.jjconflict-side-1/src/cached/: valuable.rs
.jjconflict-side-1/src/ext/: code.rs
.jjconflict-side-1/src/instrument/: parameter.rs  signature.rs
.jjconflict-side-1/src/layer/fmt/: rotation.rs
.obsidian/: workspace.json
ff/: f.2026-02-05-02-36
logs/: json_log.2026-02-06  json_log.2026-02-07
python/: main.py
src/: any_ext.rs  cached.rs  callsite.rs  contextvar.rs  event.rs  ext.rs  ffi_ext.rs  formatting.rs  function_ext.rs  imports.rs  inspect.rs  instrument.rs  introspect.rs  layer.rs  leak.rs  level.rs  lib.rs  py_type.rs  span.rs  template.rs  valuable.rs
src/cached/: display.rs  valuable.rs
src/callsite/: default.rs  empty.rs  kind.rs
src/ext/: any.rs  code.rs  ffi.rs  frame.rs  function.rs  template.rs
src/formatting/: percent.rs  test_valuable.rs  valuable.rs
src/inspect/: code.rs  frame.rs  inspector.rs
src/instrument/: async_generator.rs  coroutine.rs  fn_types.rs  generator.rs  log_parameters.rs  parameter.rs  py_signature.rs  signature.rs
src/instrument/fn_types/: async_generator.rs  coroutine.rs  generator.rs
src/layer/: fmt.rs
src/layer/fmt/: file.rs  rotation.rs  span.rs  time.rs  to_layer.rs
src/layer/fmt/time/: format.rs  formats.rs  timer.rs
src/leak/: debug.rs
src/template/: interpolation.rs  template_ext.rs  template_string.rs
