[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "tracing"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "aiohttp",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
# do not cache the rust library when using maturin, why is this the default behaviour
package = false
